--- a/companies-crud.yml
+++ b/companies-crud.yml
@@ -1,6 +1,8 @@
-db:
-  url: jdbc:postgresql://localhost:5432/companies
-  connection-timeout: 20000
-  maximum-pool-size: 5
-  username: root
-  password: root
+spring:
+  datasource:
+    username: root
+    password: root
+    url: jdbc:postgresql://localhost:5432/companies
+    hikari:
+      connection-timeout: 20000
+      maximum-pool-size: 5
